# RemoteRelayRust

./: .gitignore  CNAME  Cargo.toml  README.md  remoterelay.service  remoterelay_0.2.0-1_amd64.deb
.github/workflows/: rust.yml
.rpm/: remote_relay_rust.spec
docker/: BuildRemoteRelayRustImage.sh  Dockerfile
pool/: Release
pool/main/: remote-relay-rust_0.2.0-1_amd64.deb
scripts/: RemoteRelayRust.service  buildLinux.sh  install.sh
src/: config_helpers.rs  main.rs  relay_routes.rs  relays.rs
src/models/: api_response.rs  channels_models.rs  config_models.rs  data_thread_models.rs  kasa_network_models.rs  mod.rs  presets.rs  relays.rs
src/routes/: index_routes.rs  mod.rs  preset_routes.rs  relay_routes.rs
src/utils/: ThreadHandling.rs  config_helpers.rs  data_thread_handling.rs  kasa_plug_network_functions.rs  load_config.rs  local_config_utils.rs  mod.rs  mongodb_utils.rs  thread_handling.rs
