[package]
authors = ["Slad3"]
description = "Http server that allows a user to control their in-home smartplugs (and other forms of relays with a boolean state) externally from the respective smartplug's ecosystem. Rebuilt in Rust."
edition = "2021"
homepage = "https://github.com/Slad3/RemoteRelayRust"
license = "MIT"
name = "remote_relay_rust"
repository = "https://github.com/Slad3/RemoteRelayRust"
rust-version = "1.79.0"
version = "0.2.0"

[dependencies]
serde_json = { version = "1.0.132", features = [] }
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.214"
dotenv = "0.15.0"
tokio = "1.41.1"
futures = "0.3.31"
clap = { version = "4.5.20", features = ["derive"] }

[dependencies.mongodb]
version = "3.1.0"
features = ["sync"]

[package.metadata.precommit]
fmt = "cargo fmt"
